# UltrasoundAI

./: README.md
UltrasoundAI/: CMakeLists.txt
UltrasoundAI/BreastLesionClassification/: BreastLesionClassification.py  CMakeLists.txt
UltrasoundAI/BreastLesionClassification/Resources/UI/: BreastLesionClassification.ui
UltrasoundAI/BreastLesionClassification/Training/: classification_model_001_Training.ipynb
UltrasoundAI/BreastLesionSegmentation/: BreastLesionSegmentation.py
UltrasoundAI/BreastLesionSegmentation/Resources/Data/Predicted_mask/: dummy.txt.txt
UltrasoundAI/BreastLesionSegmentation/Resources/UI/: BreastLesionSegmentation.ui
UltrasoundAI/BreastLesionSegmentation/Training/: segmentation_model_0001_Training.ipynb
